force-app/main/default/objects/Geographic_Definition__c/Geographic_Definition__c.object-meta.xml
<CustomObject>
    <label>Geographic Definition</label>
    <nameField>
        <label>Geographic Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographic Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>