force-app/main/default/objects/Geographic_Definition__c/fields/Geographic_Definition__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geographic Definition</label>
    <referenceTo>Geographic_Definition__c</referenceTo>
    <relationshipLabel>Child Geographic Definitions</relationshipLabel>
    <relationshipName>Geographic_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>