force-app/main/default/objects/Geographic_Definition__c/fields/Geographic_ID__c.field-meta.xml
<CustomField>
    <fullName>Geographic_ID__c</fullName>
    <externalId>true</externalId>
    <label>Geographic ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>