force-app/main/default/objects/Geographic_Definition__c/fields/Internal_Point__c.field-meta.xml
<CustomField>
    <fullName>Internal_Point__c</fullName>
    <label>Internal Point</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>