force-app/main/default/objects/Geographic_Definition__c/fields/Land_Area__c.field-meta.xml
<CustomField>
    <fullName>Land_Area__c</fullName>
    <label>Land Area</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>