force-app/main/default/objects/Geographic_Definition__c/fields/Latitude_Southern_Most__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Southern_Most__c</fullName>
    <label>Latitude - Southern Most</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>