force-app/main/default/objects/Geographic_Definition__c/fields/Longitude_Western_Most__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Western_Most__c</fullName>
    <label>Longitude - Western Most</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>