force-app/main/default/objects/Geographic_Definition__c/fields/Lookup_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Name__c</fullName>
    <inlineHelpText>Values that can be in a client&apos;s address to help you look up a client. For example, it can be a ZIP code, state name, etc.</inlineHelpText>
    <label>Lookup Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>