force-app/main/default/objects/Geographic_Definition__c/fields/Parent_Geography_Definition__c.field-meta.xml
<CustomField>
    <fullName>Parent_Geography_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Geography</label>
    <referenceTo>Geographic_Definition__c</referenceTo>
    <relationshipLabel>Geography Definitions</relationshipLabel>
    <relationshipName>Geography_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>