force-app/main/default/objects/Geographic_Definition__c/fields/Parent_Lookup_Chain__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Chain__c</fullName>
    <formula>IF(
   NOT(ISBLANK(Parent_Geography_Definition__c )),
   Parent_Geography_Definition__r.Lookup_Name__c &amp; &apos;-&apos; &amp; TEXT(Parent_Geography_Definition__r.Type__c ) &amp; 
   IF(
      NOT(ISBLANK(Parent_Geography_Definition__r.Parent_Geography_Definition__c )),
      &apos;---&apos; &amp; Parent_Geography_Definition__r.Parent_Geography_Definition__r.Lookup_Name__c &amp; &apos;-&apos; &amp; 
      TEXT(Parent_Geography_Definition__r.Parent_Geography_Definition__r.Type__c ) &amp;
      IF(
         NOT(ISBLANK(Parent_Geography_Definition__r.Parent_Geography_Definition__r.Parent_Geography_Definition__c )),
         &apos;---&apos; &amp; Parent_Geography_Definition__r.Parent_Geography_Definition__r.Parent_Geography_Definition__r.Lookup_Name__c &amp; &apos;-&apos; &amp; 
         TEXT(Parent_Geography_Definition__r.Parent_Geography_Definition__r.Parent_Geography_Definition__r.Type__c ) 
         ,&quot;&quot;
      )
      ,&quot;&quot;
   )
   ,
   &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Lookup Chain</label>
    <type>Text</type>
</CustomField>