force-app/main/default/objects/Geographic_Definition__c/fields/Polygon__c.field-meta.xml
<CustomField>
    <fullName>Polygon__c</fullName>
    <label>Polygon</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>