force-app/main/default/objects/Geographic_Definition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Congressional District</fullName>
            </value>
            <value>
                <fullName>State Legislative District (Upper Chamber)</fullName>
            </value>
            <value>
                <fullName>State Legislative District (Lower Chamber)</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>County Subdivision</fullName>
            </value>
            <value>
                <fullName>Place</fullName>
            </value>
            <value>
                <fullName>ZIP Code Tabulation Area (ZCTA)</fullName>
            </value>
            <value>
                <fullName>Census Tract</fullName>
            </value>
            <value>
                <fullName>Census Block Group</fullName>
            </value>
            <value>
                <fullName>Census Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>